[gd_scene load_steps=18 format=3 uid="uid://ctkqjupy1f6yf"]

[ext_resource type="FontFile" uid="uid://35ejt2lpdokd" path="res://assets/fonts/ZenKakuGothicNew-Black.ttf" id="1_ffvsa"]
[ext_resource type="Script" uid="uid://7da3bm2fvug5" path="res://scenes/UI/scripts/main_command.gd" id="1_fh7rg"]
[ext_resource type="Script" uid="uid://5b1nba23ld1i" path="res://scenes/UI/scripts/action_select.gd" id="2_pll4o"]
[ext_resource type="StyleBox" uid="uid://vgbudgiuuyxt" path="res://scenes/UI/standard_frame.tres" id="3_03edq"]
[ext_resource type="StyleBox" uid="uid://b5kbwv7cw8oso" path="res://scenes/UI/standard_hover.tres" id="4_22uqi"]
[ext_resource type="Script" uid="uid://lcuhqlh4h6ii" path="res://scenes/UI/scripts/skill_select.gd" id="4_pll4o"]
[ext_resource type="StyleBox" uid="uid://c2hg57wrdang6" path="res://scenes/UI/standard_outline.tres" id="5_6ni85"]
[ext_resource type="Script" uid="uid://bw6rifte4yxcy" path="res://scenes/UI/scripts/rotation.gd" id="5_agsc7"]
[ext_resource type="Script" uid="uid://c45mrggkesxps" path="res://scenes/UI/scripts/command_input_translater.gd" id="5_py4tk"]
[ext_resource type="Script" uid="uid://c77dhc1btmewv" path="res://scenes/battle/scripts/command_manager.gd" id="6_py4tk"]
[ext_resource type="Script" uid="uid://dbt31shju3p76" path="res://scenes/battle/scripts/battle_view.gd" id="13_22uqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vceff"]

[sub_resource type="LabelSettings" id="LabelSettings_xd4uy"]
font = ExtResource("1_ffvsa")
font_size = 24
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.3647059)
shadow_offset = Vector2(2.58, 3.1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekamt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djc8l"]

[sub_resource type="LabelSettings" id="LabelSettings_pll4o"]
font = ExtResource("1_ffvsa")
font_size = 18
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.3647059)
shadow_offset = Vector2(2.58, 3.1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h4dll"]

[node name="Battle" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Command" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fh7rg")

[node name="ActionSelect" type="Control" parent="CanvasLayer/Control/Command"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 384.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_pll4o")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Command/ActionSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Skill" type="Button" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer/Skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_vceff")
theme_override_styles/focus = ExtResource("5_6ni85")
text = "ワザ"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rotation" type="Button" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label2" type="Label" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer/Rotation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ekamt")
theme_override_styles/focus = ExtResource("5_6ni85")
text = "カイテン"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Surrender" type="Button" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label2" type="Label" parent="CanvasLayer/Control/Command/ActionSelect/VBoxContainer/Surrender"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ekamt")
theme_override_styles/focus = ExtResource("5_6ni85")
text = "コウサン"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillSelect" type="Control" parent="CanvasLayer/Control/Command"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 384.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_pll4o")

[node name="BackButton" type="Button" parent="CanvasLayer/Control/Command/SkillSelect"]
custom_minimum_size = Vector2(0, 29.18)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51600003
anchor_top = 0.067
anchor_right = 0.90000004
anchor_bottom = 0.155
offset_left = 23.263992
offset_top = -62.512005
offset_right = 29.599976
offset_bottom = -60.080006
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/SkillSelect/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -0.114011765
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_djc8l")
text = "戻る"
label_settings = SubResource("LabelSettings_pll4o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Command/SkillSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Skill" type="Button" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer/Skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_djc8l")
text = "ワザ1"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill2" type="Button" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer/Skill2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_djc8l")
text = "ワザ2"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill3" type="Button" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer/Skill3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_djc8l")
text = "ワザ3"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill4" type="Button" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_03edq")
theme_override_styles/hover = ExtResource("4_22uqi")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/SkillSelect/VBoxContainer/Skill4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_djc8l")
text = "称号ワザ"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rotation" type="Control" parent="CanvasLayer/Control/Command"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 832.0
offset_top = 384.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_agsc7")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/Rotation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 78.915
offset_bottom = -206.08496
grow_horizontal = 2
grow_vertical = 2
text = "交代しますか？"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Button" parent="CanvasLayer/Control/Command/Rotation"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 0
offset_left = 49.0
offset_top = 142.27
offset_right = 207.0
offset_bottom = 180.27
theme_override_styles/normal = ExtResource("3_03edq")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/Rotation/Yes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_h4dll")
text = "はい"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="No" type="Button" parent="CanvasLayer/Control/Command/Rotation"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 0
offset_left = 212.0
offset_top = 142.27
offset_right = 370.0
offset_bottom = 180.27
theme_override_styles/normal = ExtResource("3_03edq")

[node name="Label" type="Label" parent="CanvasLayer/Control/Command/Rotation/No"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_h4dll")
text = "いいえ"
label_settings = SubResource("LabelSettings_xd4uy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Translater" type="Node" parent="CanvasLayer/Control/Command"]
script = ExtResource("5_py4tk")

[node name="Allies" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Status" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Info" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CommandManager" type="Node" parent="." node_paths=PackedStringArray("command_ui")]
script = ExtResource("6_py4tk")
command_ui = NodePath("../CanvasLayer/Control/Command")

[node name="BattleView" type="Node2D" parent="."]
script = ExtResource("13_22uqi")

[node name="BackgroundLayer" type="Node2D" parent="BattleView"]
z_index = -10

[node name="MedalLayer" type="Node2D" parent="BattleView"]
z_index = -10

[node name="Markers" type="Node2D" parent="BattleView/MedalLayer"]

[node name="P1" type="Node2D" parent="BattleView/MedalLayer/Markers"]

[node name="1" type="Marker2D" parent="BattleView/MedalLayer/Markers/P1"]
position = Vector2(640, 560)

[node name="2" type="Marker2D" parent="BattleView/MedalLayer/Markers/P1"]
position = Vector2(576, 640)

[node name="3" type="Marker2D" parent="BattleView/MedalLayer/Markers/P1"]
position = Vector2(704, 640)

[node name="P2" type="Node2D" parent="BattleView/MedalLayer/Markers"]

[node name="1" type="Marker2D" parent="BattleView/MedalLayer/Markers/P2"]
position = Vector2(640, 144)

[node name="3" type="Marker2D" parent="BattleView/MedalLayer/Markers/P2"]
position = Vector2(576, 72)

[node name="2" type="Marker2D" parent="BattleView/MedalLayer/Markers/P2"]
position = Vector2(704, 72)

[node name="EffectLayer" type="Node2D" parent="BattleView"]

[connection signal="rotation_selected" from="CanvasLayer/Control/Command/ActionSelect" to="CanvasLayer/Control/Command" method="_on_rotation_chosen"]
[connection signal="skill_selected" from="CanvasLayer/Control/Command/ActionSelect" to="CanvasLayer/Control/Command" method="_on_skill_chosen"]
[connection signal="pressed" from="CanvasLayer/Control/Command/ActionSelect/VBoxContainer/Skill" to="CanvasLayer/Control/Command/ActionSelect" method="_on_skill_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Command/ActionSelect/VBoxContainer/Rotation" to="CanvasLayer/Control/Command/ActionSelect" method="_on_rotation_pressed"]
